src/test/resources/inspections/codeError/FileClassnameCaseInspection/default.php
<?php

class <error descr="[PHP Hammer] Class name (\"Dummy\") does not match the file that stores it (\"default.php\").">Dummy</error> {
}
